# touch_fish

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  build.py  config.json  download_model.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/superpowers/specs/: 2026-05-13-touch-fish-guard-design.md  2026-05-13-touch-fish-guard-implementation-plan.md
src/: __init__.py  camera_monitor.py  face_detector.py  fake_face_detector.py  main.py  main_controller.py  state_manager.py  tray_icon.py
src/utils/: __init__.py  config.py  logger.py
src/window_manager/: __init__.py  base.py  factory.py  macos.py  windows.py
tests/: test_stage1.py  test_stage2.py  test_stage3.py
